# holoanalytics-mini2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
extract/: youtube_fetch.py
infra/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  versions.tf
infra/env/: dev.tfvars
load/: load_to_mysql.py
transform/: dbt_project.yml
transform/macros/: date_trunc_mysql.sql  positive_values.sql
transform/models/marts/: fct_engagement_daily.sql  fct_engagement_daily.yml
transform/models/staging/: stg_youtube_stats.sql  stg_youtube_stats.yml
